2007-01-07  Jim Blandy  <jimb@codesourcery.com>

	* ax-general.c (ax_const_l): Select proper opcode for the given
	value.

2007-01-04  Vladimir Prus  <vladimir@codesourcery.com>

	* varobj.c (c_value_of_root): Don't select frame if variable
	object is out of scope.

2007-01-06  Nick Roberts  <nickrob@snap.net.nz>

	* varobj.c (struct varobj): New member print_value.
	(install_new_value): Compare last printed value with current one
	instead of contents.
	(new_variable): Initialize var->print_value to NULL.
	(free_variable): Free var->print_value.
	(value_get_print_value): New function derived from
	c_value_of_variable.
	(c_value_of_variable): Use value_get_print_value.

2007-01-05  Joel Brobecker  <brobecker@adacore.com>

	* i386-tdep.c (i386_analyze_stack_align): Add comment.

2007-01-05  Joel Brobecker  <brobecker@adacore.com>

	* NEWS: Add entries for new catch commands.

2006-02-05  Joel Brobecker  <brobecker@adacore.com>

        * dwarf2read.c (partial_die_info): Add field has_byte_size.
        (add_partial_symbol): Correct identification of external references.
        (process_structure_scope): Likewise.
        (read_partial_die): Handle DW_AT_byte_size attribute.

2007-01-05  Daniel Jacobowitz  <dan@codesourcery.com>

	* xml-support.c (gdb_xml_end_element): Remove wrong backslashes.

2007-01-05  Nick Roberts  <nickrob@snap.net.nz>

	* varobj.c (get_type_deref): Fix variable objects for references to
	pointers.

2007-01-04  Daniel Jacobowitz  <dan@codesourcery.com>

	* symtab.c (find_pc_sect_psymtab): Add comments.  Handle psymtabs
	with no symbols.

2007-01-04  Daniel Jacobowitz  <dan@codesourcery.com>

	* memory-map.c (struct_memory_map_parsing_data): Remove most
	members.  Make property_name an array.
	(free_memory_map_parsing_data, memory_map_start_element)
	(memory_map_end_element, memory_map_character_data): Delete.
	(memory_map_start_memory, memory_map_end_memory)
	(memory_map_start_property, memory_map_end_property): New functions.